<resources>
    <string name="app_name">My Favourite Movies</string>
    <string name="add_movie_button">Add Movie</string>
    <string name="add_movie_activity">Add Movie</string>
    <string name="add_movie_name_label">Name:</string>
    <string name="add_movie_name_input"> </string>
    <string-array name="genre_array">
        <item>Select</item>
        <item>Action</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>Family</item>
        <item>Horror</item>
        <item>Crime</item>
        <item>Others</item>
    </string-array>
    <string name="add_movie_description_label">Description:</string>
    <string name="add_movie_description_input"> </string>
    <string name="add_movie_rating_label">Rating:</string>
    <string name="add_movie_rating_number"> </string>
    <string name="add_movie_rating_input"> </string>
    <string name="add_movie_genre_label">Genre:</string>
    <string name="add_movie_genre_input"> </string>
    <string name="add_movie_year_label">Year:</string>
    <string name="add_movie_year_input"> </string>
    <string name="add_movie_imdb_label">IMDB:</string>
    <string name="add_movie_imdb_input"> </string>
    <string name="edit_movie_activity">Edit Movie</string>
    <string name="edit_movie_button">Edit</string>
    <string name="edit_movie_save">Save Changes</string>
    <string name="edit_movie_pick_color">Pick a Movie</string>
    <string name="delete_movie_button">Delete Movie</string>
    <string name="listbyyear_button">Show List by Year</string>
    <string name="listbyyear_activity">Movies by Year</string>
    <string name="listbyyear_finish">Finish</string>
    <string name="listbyrating_activity">Movies by Rating</string>
    <string name="listbyrating_button">Show List by Rating</string>
</resources>
