<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mahi.homework2.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="88dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/add_movie_button"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            android:elevation="0dp"
            android:textAllCaps="false" />

        <Button
            android:text="@string/edit_movie_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_button"
            android:textAllCaps="false" />

        <Button
            android:text="@string/delete_movie_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:textAllCaps="false" />

        <Button
            android:text="@string/listbyyear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listyear_button"
            android:textAllCaps="false" />

        <Button
            android:text="@string/listbyrating_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listrating_button"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>
