<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mahi.homework2.AddActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="103dp"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/add_movie_name_label"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:id="@+id/add_movie_name_label"
                    android:textAlignment="viewStart"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:text="@string/add_movie_name_input"
                android:ems="10"
                android:id="@+id/add_movie_name_input"
                android:layout_weight="0.06" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="133dp">

            <TextView
                android:text="@string/add_movie_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_movie_description_label"
                android:textAlignment="viewStart"
                android:textStyle="normal|bold"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/add_movie_description_input"
                android:text="@string/add_movie_description_input" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText17" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:layout_weight="0.71"
            android:weightSum="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="123dp"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:text="@string/add_movie_genre_label"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:id="@+id/add_movie_genre_label"
                    android:layout_weight="0.24"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/add_movie_rating_label"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:id="@+id/add_movie_genre_label"
                    android:layout_weight="0.24"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/add_movie_year_label"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:id="@+id/add_movie_genre_label"
                    android:layout_weight="0.24"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/add_movie_imdb_label"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:id="@+id/add_movie_genre_label"
                    android:layout_weight="0.24"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <Spinner
                    android:id="@+id/genre_spinner"
                    android:layout_width="240dp"
                    android:layout_height="58dp" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:weightSum="1">

                    <SeekBar
                        android:layout_width="163dp"
                        android:layout_height="59dp"
                        android:id="@+id/add_movie_rating_seekbar"
                        android:isScrollContainer="false"
                        android:max="5"
                        android:progress="0"
                        android:layout_weight="0.77" />

                    <TextView
                        android:text="@string/add_movie_rating_number"
                        android:layout_width="44dp"
                        android:layout_gravity="center"
                        android:layout_height="match_parent"
                        android:id="@+id/add_movie_rating_number"
                        android:textSize="18sp"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_movie_year_input"
                    android:ems="10"
                    android:layout_weight="0.38"
                    android:id="@+id/add_movie_year_input"
                    android:inputType="number" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/add_movie_imdb_input"
                    android:ems="10"
                    android:id="@+id/add_movie_imdb_input"
                    android:layout_weight="0.17" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="0.17">

            <Button
                android:text="@string/add_movie_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="119dp"
                android:layout_marginStart="119dp"
                android:id="@+id/add_movie_button"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textAllCaps="false" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
